edit user detection body
