# models/dantion.js
@@ -1,3 +1,17 @@
-export const users = [];
+export const users = [
+	{
+		id: "admin-5a25cb24-7e89-4ab9-8be7-d51fce4923ec",
+		name: "Admin Dantion",
+		address: "Jalan Karangan",
+		number: "090293232",
+		parentNumber: "082323181",
+		email: "admindantion@gmail.com",
+		password: "$2b$10$XnKFh7jUuQCSP5iJwjxArudeOxZK/ybnxKUsE4qkvbASCFaDZfPxC",
+		photo: "admin.jpg",
+    role: "admin",
+		createdAt: "2022-05-31T19:43:07.129Z",
+		updatedAt: "2022-05-31T19:43:07.129Z",
+	},
+];
 export const detections = [];
 export const places = [];
